Update styling on small screens. fixes #4

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,3 +6,25 @@ a:hover, a:focus {
     font-weight: inherit;
     text-decoration: underline
 }
+
+img.site-logo {
+    max-height: 100%;
+}
+
+@media (max-width: 960px), (max-height: 600px) {
+    div.site-logo {
+        display: none;
+    }
+    span.site-logo-credit {
+        display: none;
+    }
+}
+
+@media (max-height: 700px) {
+    footer {
+        bottom: 0;
+    }
+    header h3 {
+        margin-block-end: 0.5em;
+    }
+}
